feat: add node and browser contract builder

--- a/packages/docs/src/content/docs/zh-cn/dev_log/202307.md
+++ b/packages/docs/src/content/docs/zh-cn/dev_log/202307.md
@@ -25,4 +25,12 @@ description: ''
     - run: git submodule update --init --recursive
 ```
 
-- [ ] 解决了 GitHub action 问题时发现 yml 配置中有很多重复的配置，比如上面配置，可以将这些配置提取到一个单独的文件中，然后在 yml 中引入
+- [ ] 解决 GitHub action 问题时发现 yml 配置中有很多重复的配置，比如上面配置，可以将这些配置提取到一个单独的文件中，然后在 yml 中引入
+
+### 7-20~7-25
+
+被 swc 的 bug 卡了几天
+
+- [ ] 计划把在浏览器中加载并编译合约的流程跑通(sad)，但因为 swc-wasm 的问题，暂时没法跑通，等待 swc-wasm 的[修复](https://github.com/swc-project/swc/issues/7140)
+- [x] 整理了 contract_builder 的代码，实现 cli、node、browser 三种方式的导出
+- [x] vite dev 处理@swc/wasm-web，不能走预编译，配置了排除
