deps: update deps

--- a/packages/docs/src/content/docs/zh-cn/dev_log/202308.md
+++ b/packages/docs/src/content/docs/zh-cn/dev_log/202308.md
@@ -9,3 +9,8 @@ description: ''
 - [x] swcpack 在 NodeJs 环境下打包仍然有问题，从 swc 主仓库看起来是相关功能还没做完，所以选择 rollup 来做合约打包
 - [x] rollup 打包合约成功，但是打包出来的合约文件中的代码在 vm 中运行报错(Date.now() 未定义)，排查了好久复现是 vm 入口文件未引入 chrono, 并修复了这个问题
 - [x] 添加了合约打包的测试用例，e2e 测试用例中包含了合约打包后的代码在 vm 中运行的测试
+
+### 8-22
+
+- [x] 升级了所有依赖到最新版，cmd: `pnpm -r up -L`,解决升级后的问题
+- [x] webui测试报错，编译合约step失败，使用[act](https://github.com/nektos/act)本地调试GitHub Action
